Agrega el connectionString

--- a/Esmailin_Martinez_P2_AP1/appsettings.json
+++ b/Esmailin_Martinez_P2_AP1/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "workstation id=EsmailinDBP2.mssql.somee.com;packet size=4096;user id=Martinez02_SQLLogin_1;pwd=8ykh1pl3yy;data source=EsmailinDBP2.mssql.somee.com;persist security info=False;initial catalog=EsmailinDBP2;TrustServerCertificate=True"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
